--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,9 @@ h2, h3 {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: center; }
+  align-items: center;
+  background-color: #5B8FB9;
+  color: #000; }
 
 .contact1 {
   display: flex;
@@ -150,9 +152,6 @@ footer, header {
 /*COLOR DEL FOOTER Y LA SECCION CONTACTO*/
 footer {
   background-color: #CBE4DE; }
-
-#contact {
-  background-color: #5B8FB9; }
 
 /*Estilado del nombre y titulo*/
 .nf {
