--- a/scss/main.scss
+++ b/scss/main.scss
@@ -131,6 +131,8 @@ h2 , h3{
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  background-color: #5B8FB9;
+  color: #000;
 }
 .contact1{
   display: flex;
@@ -164,9 +166,7 @@ footer, header{
 footer{
     background-color: #CBE4DE;
 }
-#contact{
-  background-color: #5B8FB9;
-}
+
 
 /*Estilado del nombre y titulo*/
 .nf {
