--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,8 @@ section {
 
 a, ul, li {
   text-decoration: none;
-  list-style: none; }
+  list-style: none;
+  color: #000; }
 
 .talk1 {
   display: flex;
@@ -119,8 +120,7 @@ h2, h3 {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  background-color: #5B8FB9;
-  color: #000; }
+  background-color: #A5C9CA; }
 
 .contact1 {
   display: flex;
